# WebD

./: CMakeLists.txt  main.cpp  readme.md
cgi/: webd.cgi  webd.cgi.example
conf/: webd.conf  webd.conf.example
docs/: ab.md  rlimit.md  unicode和utf-8互转.md  压测报告-cgi模式.md  压测报告-web模式.md  压测报告.md  压测结果.md  常见错误.md  结果展示页面.md
html/: get.html  get_show.html  index.html  post.html
src/: ActiveFile.h  Configure.h  Context.h  Entry.cpp  Entry.h  FastCgiContext.h  Fastcgi.cpp  Fastcgi.h  Heap.h  HttpContext.cpp  HttpContext.h  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  LocalVector.h  StringUtil.h  TemplateParse.h  TemplateReplace.cpp  TemplateReplace.h  TransCode.h  main.cpp
